# HeadHunter

./: README.md  main.py  pyproject.toml
src/: abs_class_operations.py  abs_class_vacancy.py  get_vacancies.py  hh_api.py  operations_on_vacancies.py  save_vacancies.py  user.py  working_on_vacancies.py
tests/: conftest.py  test_operations_on_vacancies.py  test_save_vacancies.py  test_user.py
